Fix to misaligned gliphyicons

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -8,11 +8,6 @@ body {
     padding-bottom: 0;
 }
 
-span.glyphicon {
-    margin-right: 15px;
-    margin-left: 15px;
-}
-
 .back-button {
     float: left;
 }
